# belt-4-submission

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/amm_pool/: Cargo.toml
contracts/amm_pool/src/: lib.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs
contracts/lp_token/: Cargo.toml
contracts/lp_token/src/: lib.rs
contracts/price_oracle/: Cargo.toml
contracts/price_oracle/src/: lib.rs
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/oracle/: page.tsx
frontend/app/pool/: page.tsx
frontend/components/: Navbar.tsx  OracleChart.tsx  PoolCard.tsx  SwapCard.tsx  Toast.tsx
frontend/lib/: contracts.ts
frontend/tests/: basic.spec.ts
scripts/: deploy.sh
