[workspace]
members = [
    "contracts/lp_token",
    "contracts/amm_pool", 
    "contracts/price_oracle",
    "contracts/integration-tests"
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "21.7.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
